# MineSweeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  minesweeper
include/: board.hpp  header.hpp
src/: board.cpp  main.cpp
